--- a/goit-react-hw-01-components/package.json
+++ b/goit-react-hw-01-components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-playground",
+  "name": "goit-react-hw-01-components",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,22 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.1"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react-swc": "^3.7.0",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "gh-pages": "^6.1.1",
-    "prettier": "^3.2.5",
-    "sass": "^1.77.2",
     "vite": "^5.2.0"
   }
 }
